Fixed the Background issue on mobile

--- a/API/styles.css
+++ b/API/styles.css
@@ -5,7 +5,7 @@ html, body {
   height: 100%;
 }
 body {
-  min-height: 100vh;
+  min-height: 100svh;
   background-image: url("1267857.jpg");
   background-size: cover;
   background-position: center;
@@ -13,6 +13,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media (max-width: 768px) {
+    body{
+      background-position: center top;
+    }
+  }
 }
 #characterName{
   background: rgba(15, 20, 30, 0.55);
